#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = [
  "zenoh-bridge-ros1",
  "zenoh-plugin-ros1",
]

[workspace.package]
version = "0.10.0-dev"
authors = [
    "Dmitrii Bannov <dmitrii.bannov@zettascale.tech>",
    "Luca Cominardi <luca@zettascale.tech>"
]
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-ros1"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]

[workspace.dependencies]
atoi = "2.0.0"
async-std = "=1.12.0"
clap = "3.2.23"
ctrlc = "3.2.5"
env_logger = "0.9.1"
flume = "0.10.14"
futures = "0.3.24"
git-version = "0.3.5"
lazy_static = "1.4.0"
log = "0.4.17"
serde = "1.0.147"
serde_json = "1.0.85"
async-global-executor = "2.3.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
duration-string = "0.3.0"
zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", features = ["unstable"] }
zenoh-ext = { git = "https://github.com/eclipse-zenoh/zenoh.git", features = ["unstable"] }
zenoh-core = { git = "https://github.com/eclipse-zenoh/zenoh.git" }
zenoh-plugin-trait = { git = "https://github.com/eclipse-zenoh/zenoh.git", default-features = false }
rosrust = { git = "https://github.com/ZettaScaleLabs/rosrust.git", branch = "feature/fix_bugs" }
rustc_version = "0.4"
hex = "0.4.3"

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
