#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[workspace]
resolver = "2"
members = ["zenoh-bridge-ros1", "zenoh-plugin-ros1", "rosrust/rosrust"]
exclude = ["rosrust"]

[workspace.package]
version = "1.0.0-dev-77-g3d90897"
authors = [
  "Dmitrii Bannov <dmitrii.bannov@zettascale.tech>",
  "Luca Cominardi <luca@zettascale.tech>",
]
edition = "2021"
repository = "https://github.com/eclipse-zenoh/zenoh-plugin-ros1"
homepage = "http://zenoh.io"
license = " EPL-2.0 OR Apache-2.0"
categories = ["network-programming"]

[workspace.dependencies]
atoi = "2.0.0"
async-trait = "0.1"
clap = "3.2.23"
ctrlc = "3.2.5"
futures = "0.3.24"
git-version = "0.3.5"
lazy_static = "1.4.0"
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.114"
async-global-executor = "2.3.1"
rand = "0.8.5"
strum = "0.24"
strum_macros = "0.24"
duration-string = "0.3.0"
flume = "0.11"
hex = "0.4.3"
xml-rpc = "0.0.12"
rustc_version = "0.4"
test-case = { version = "3.3" }
tokio = { version = "1.35.1", features = ["process"] }
tracing = "0.1"
zenoh = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", features = [
  "internal",
  "internal_config",
  "unstable",
  "plugins",
] }
zenoh-config = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-plugin-rest = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false, features=["static_plugin"]}
zenoh-plugin-trait = { version = "1.0.0-dev", git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "main", default-features = false }
zenoh-plugin-ros1 = { version = "1.0.0-dev", path = "zenoh-plugin-ros1", default-features = false }

[profile.release]
debug = false
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
