[package]
name = "zenoh-plugin-ros1"
categories = [ "network-programming" ]
description = "Zenoh plugin for bidging ROS1"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.repository]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.metadata]
[package.metadata.deb]
name = "zenoh-plugin-ros1"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = [ "../LICENSE", "0" ]
depends = "zenohd (=0.11.0-dev-40-gb7cddbf)"

[lib]
name = "zenoh_plugin_ros1"
crate-type = [ "cdylib", "rlib" ]

[features]
no_mangle = []
test = []
stats = [ "zenoh/stats" ]
default = [ "no_mangle", "test" ]

[dependencies]
[dependencies.atoi]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.flume]
workspace = true

[dependencies.futures]
workspace = true

[dependencies.git-version]
workspace = true

[dependencies.lazy_static]
workspace = true

[dependencies.log]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.async-global-executor]
workspace = true

[dependencies.async-trait]
workspace = true

[dependencies.rand]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[dependencies.duration-string]
workspace = true

[dependencies.zenoh]
workspace = true

[dependencies.zenoh-ext]
workspace = true

[dependencies.zenoh-core]
workspace = true

[dependencies.zenoh-plugin-trait]
workspace = true

[dependencies.hex]
workspace = true

[dependencies.xml-rpc]
workspace = true

[dependencies.rosrust]
path = "../rosrust/rosrust"

[dependencies.async-std]
version = "=1.12.0"
features = [ "unstable", "attributes" ]

[dev-dependencies]
serial_test = "0.10.0"
multiset = "0.0.5"

[dev-dependencies.ctrlc]
workspace = true

[build-dependencies]
[build-dependencies.rustc_version]
workspace = true