#
# Copyright (c) 2022 ZettaScale Technology
#
# This program and the accompanying materials are made available under the
# terms of the Eclipse Public License 2.0 which is available at
# http://www.eclipse.org/legal/epl-2.0, or the Apache License, Version 2.0
# which is available at https://www.apache.org/licenses/LICENSE-2.0.
#
# SPDX-License-Identifier: EPL-2.0 OR Apache-2.0
#
# Contributors:
#   ZettaScale Zenoh Team, <zenoh@zettascale.tech>
#
[package]
name = "zenoh-plugin-ros1"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
categories = ["network-programming"]
description = "Zenoh plugin for bidging ROS1"

[lib]
name = "zenoh_plugin_ros1"
crate-type = ["cdylib", "rlib"]

[features]
dynamic_plugin = []
test = []
stats = ["zenoh/stats"]
default = [
    "dynamic_plugin",
    "test",
] # TODO: https://zettascale.atlassian.net/browse/ZEN-291

[dependencies]
atoi = { workspace = true }
flume = { workspace = true }
futures = { workspace = true }
git-version = { workspace = true }
lazy_static = { workspace = true }
test-case = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-global-executor = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
duration-string = { workspace = true }
zenoh = { workspace = true }
zenoh-plugin-trait = { workspace = true }
hex = { workspace = true }
xml-rpc = { workspace = true }
rosrust = { path = "../rosrust/rosrust" }

[dev-dependencies]
serial_test = "0.10.0"
multiset = "0.0.5"
ctrlc = { workspace = true }
# TODO: https://zettascale.atlassian.net/browse/ZEN-291
# zenoh-plugin-ros1 = { path = ".", features = ["test"]}

[build-dependencies]
rustc_version = { workspace = true }

[package.metadata.deb]
name = "zenoh-plugin-ros1"
maintainer = "zenoh-dev@eclipse.org"
copyright = "2017, 2022 ZettaScale Technology Inc."
section = "net"
license-file = ["../LICENSE", "0"]
depends = "zenohd (=0.11.0-dev-1)"
